<resources>
    <string name="app_name">Tela de Cadastro</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="data_de_vencimento">Data de vencimento</string>
    <string name="adicionar_produto">Adicionar Produto</string>
    <string name="descri_o_do_produto">Descrição do Produto</string>
    <string name="retirar_at">Retirar até</string>
    <string name="categoria_do_produto">Categoria do Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="Fundo">TODO</string>
</resources>