<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:includeFontPadding="true"
        android:text="@string/cadastrar_produto"
        android:textColorLink="#3E2A2A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/borda"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nome_do_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="199dp"
        android:layout_height="133dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:srcCompat="@drawable/imagem"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/Fundo" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/descri_o_do_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/quantidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/data_de_vencimento"
        android:textColor="#130F0F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/retirar_at"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/categoria_do_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="319dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/adicionar_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

</androidx.constraintlayout.widget.ConstraintLayout>